[package]
name = "bombard"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "bombard"
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.31"
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.26", features = ["attributes", "tokio-runtime"] }
pyo3-stub-gen = "0.14.1"
tokio = { version = "1.47", features=["macros"] }

[build-dependencies]
pyo3-build-config = "0.26.0"
